# vegas_devel

./: .gitignore  .gitmodules  README.md
bofs/: README
guppi_daq/: README  setup.py
mdls/: .gitignore  README  StartCasper.sh.ptcs  cic_dec4_4inputs_recursive1_testing.mdl  cic_filter_test_dec12_with_mult.mdl  cic_filter_test_dec4_without_multipliers.mdl  dec_fir_xblock.mdl  gbt_ddc.mdl  gbtspec_mode13.mdl  gen_ucf.m  half_band.mdl  half_band_xblock.mdl  mode13_net.mdl  parallel_fir_xblock.mdl  reshapedevel.mdl  reshaper_fsm.m  spead_packetizer.m  spead_packetizer.mdl  ssg_speader_r2.mdl  startup.m.ptcs  tengbeudp.mdl  tengbeudpv1.mdl  vegas06_nettest_150mhz_r1.mdl  vegas13_fastnettest_250mhz_r1.mdl  vegas13_nettest_150mhz_r1.mdl  vegas_ssg.mdl
scripts/: CIC_filter_testing.m  CIC_filter_testing2.m  README  conf_mode13_one_subband.py  gbt_conf.py  gbt_conf_mode06_net.py  gbt_conf_mode13_fastnet.py  gbt_conf_mode13_net.py  gbtspec01_sim_out.m  mixercic_funcs.py  reset_roach.py  reset_roach_lbw.py  reset_roach_mode13.py  rm_shmem  simin.m  (+10 more)
src/vegas_psr/vegas_psrfits_utils/: .gitignore  Makefile.am  README  README.psrfits_utils  configure.ac  downsample.c  find_dropped_blocks.c  fix_psrfits_polyco.c  fold.c  fold.h  fold_psrfits.c  gpu_hostfile.txt  guppi_PSRFITS_v3.4_fold_template.txt  guppi_PSRFITS_v3.4_search_template.txt  misc_utils.c  mpi_compile.sh  mpi_run.sh  mpimerge_psrfits.c  polyco.c  polyco.h  polyco_struct.h  prepare  psrfits.h  psrfits_singlepulse.c  psrfits_subband.1  psrfits_subband.c  psrfits_subband_cmd.c  psrfits_subband_cmd.cli  psrfits_subband_cmd.h  read_psrfits.c  test_psrfits.c  test_psrfits_read.c  write_psrfits.c
(+884 files in other folders)
